# face-scan

./: .env  .renderignore  .replit  check_dim.py  pnpm-lock.yaml  pyproject.toml  render.yaml  replit.md  replit.nix
artifacts/api-server/: package.json  pgvector_setup.sql  start-prod.sh
artifacts/api-server/.replit-artifact/: artifact.toml
artifacts/api-server/src/: app.ts  index.ts
artifacts/api-server/src/lib/: autoIndexer.ts  faceService.ts  indexer.ts  qdrant.ts  r2.ts  supabase.ts
artifacts/api-server/src/routes/: images.ts  index.ts  ingest.ts  library.ts  r2index.ts  r2library.ts  search.ts  stats.ts
artifacts/face-search/: index.html  package.json
artifacts/face-search/.replit-artifact/: artifact.toml
artifacts/face-search/src/: App.tsx  index.css
artifacts/face-search/src/components/: image-card.tsx  layout.tsx  pcloud-image-card.tsx
artifacts/face-search/src/pages/: home.tsx  search.tsx
artifacts/face-service/: main.py  requirements.txt  wsgi.py
lib/api-spec/: openapi.yaml
lib/db/src/schema/: images.ts
