[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.1.3",
    "gunicorn>=26.0.0",
    "insightface==0.7.3",
    "numpy==1.24.4",
    "onnxruntime==1.16.3",
    "opencv-python-headless==4.8.1.78",
]
